dataset1235/2025-2/1153765216/users/230013788/executions/2747719322_775838323.log
== SUBMISSION (2025-08-28 17:53:41)
-- CODE: 
x1 = int(inport("Ufam: "))
print(round(x1 * 4.0 ,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x1 = int(inport("Ufam: "))
             ^^^^^^
NameError: name 'inport' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x1 = int(inport("Ufam: "))
             ^^^^^^
NameError: name 'inport' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 17:53:42)
-- CODE: 
x1 = int(inport("Ufam: "))
print(round(x1 * 4.0 ,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x1 = int(inport("Ufam: "))
             ^^^^^^
NameError: name 'inport' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x1 = int(inport("Ufam: "))
             ^^^^^^
NameError: name 'inport' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:53:50)
-- CODE: 
x1 = int(input("Ufam: "))
print(round(x1 * 4.0 ,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
Ufam: 4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
Ufam: 4.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
